# e2rs

./: Cargo.toml  README.md
data/: E2-Colors.png.attribution  e2clues.txt  e2pieces-nesw-original.txt  e2pieces-nesw.txt.attribution  e2pieces-nswe.txt.attribution
docs/: formats.md
src/: board.rs  e2.rs  images.rs  lib.rs  main.rs  model.rs
src/e2/: images.rs
src/model/: board.rs  rotation.rs  tiles.rs  tileset.rs
